--- a/floats.html
+++ b/floats.html
@@ -18,6 +18,15 @@
         <div class="col"></div>
         <div class="col"></div>
     </div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Cras interdum nulla arcu, sed placerat nisi viverra in.
+        Phasellus ante tellus, consequat a laoreet quis, luctus ac odio.
+        Morbi egestas dapibus lacus ut efficitur. Maecenas viverra
+        imperdiet cursus. Ut vulputate tincidunt efficitur. Nunc
+        porttitor tristique nisi nec laoreet. Curabitur rhoncus, lacus
+        nec ullamcorper congue, sem arcu porttitor justo, quis hendrerit
+        ipsum erat ac risus. In hac habitasse platea dictumst. Vestibulum
+        a bibendum odio. Donec fermentum faucibus dignissim.
 </body>
 
 </html>
