--- a/floats.html
+++ b/floats.html
@@ -11,12 +11,36 @@
 <body>
     <!--NESSE PROGRAMA VAMOS TREINAR O USO DE FLOATS-->
     <div class="grid">
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
+        <div class="col">
+            <div class="col-content">
+                CONTEUDO
+            </div>
+        </div>
+        <div class="col">
+            <div class="col-content">
+                CONTEUDO
+            </div>
+        </div>
+        <div class="col">
+            <div class="col-content">
+                CONTEUDO
+            </div>
+        </div>
+        <div class="col">
+            <div class="col-content">
+                CONTEUDO
+            </div>
+        </div>
+        <div class="col">
+            <div class="col-content">
+                CONTEUDO
+            </div>
+        </div>
+        <div class="col">
+            <div class="col-content">
+                CONTEUDO
+            </div>
+        </div>
     </div>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         Cras interdum nulla arcu, sed placerat nisi viverra in.
