--- a/media-queries.html
+++ b/media-queries.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Floats</title>
     <link rel="stylesheet" href="css/floats.css">
+    <title>Media Queries</title>
 </head>
 
 <body>
-    <!--NESSE PROGRAMA VAMOS TREINAR O USO DE FLOATS-->
+    <!--MEDIA QUERIES SÃO VALORES CONDICIONAIS PARA NOSSOS ELEMENTOS CSS-->
     <div class="grid">
         <div class="col">
             <div class="col-content">
