--- a/trains/exercise4.html
+++ b/trains/exercise4.html
@@ -13,10 +13,9 @@
         <h1>This is My Website</h1>
     </div>
     <div class="menu">
-        <a href="">Home</a>
-        <a href="">Hello</a>
-        <a href="">About us</a>
-        <a href="">Contacts</a>
+        <a href=""><b>Home</b></a>
+        <a href=""><b>About Us</b></a>
+        <a href=""><b>Contacts</b></a>
     </div>
     <div class="container">
         <div class="side">a</div>
